자료 사이트 업데이트

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
     - Basic Usage: GetStarted/basic_usage.md
     - "Basic Example: Following NPC": GetStarted/example_following_ai.md
 
+  - API: api.md
 markdown_extensions:
   - admonition
   - codehilite
